# SFML-DOOM

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CmakePresets.json  LICENSE  Makefile  README.md  am_map.cpp  am_map.hpp  appveyor.yml  d_englsh.hpp  d_event.hpp  d_french.hpp  d_items.cpp  d_items.hpp  d_main.cpp  d_main.hpp  d_net.cpp  d_net.hpp  d_player.hpp  d_textur.hpp  d_think.hpp  d_ticcmd.hpp  doomdata.hpp  doomdef.cpp  doomdef.hpp  doomsav0.dsg  doomstat.cpp  doomstat.hpp  doomtype.hpp  dstrings.cpp  dstrings.hpp  f_finale.cpp  f_finale.hpp  f_wipe.cpp  features.hpp  g_game.cpp  (+98 more)
.github/workflows/: cmake-multi-platform.yml  default.yml  linux.yml  mac.yml  windows.yml
apple/: Info.plist  sfml-doom.icns
cmake/: dependencies.cmake
cmake/modules/: FindSFML.cmake
cmake/toolchains/: iOS.toolchain.cmake
cmake_modules/: FindSFML.cmake
eawpats/: acpiano.pat  blank.pat  carillon.pat  changelog.txt  choir.pat  church.pat  concrtbd.pat  copyrigh.txt  default.cfg  drumsfx.txt  eawpats.doc  gravis.cfg  gsdrums.cfg  gssfx.cfg  harmonca.pat  install.txt  marcato.pat  marimba.pat  mt-32.cfg  musicbox.pat  ocarina.pat  patguide.txt  patref24.hlp  proteus2.cfg  sitar.pat  sndfont.cfg  steeldrm.pat  sustain.cfg  synbass2.pat  syntom.pat  taiko.pat  timidity.cfg  toms.pat  trumpet.pat  tuba.pat  tubebell.pat  ultrasnd.ini  xgmap2.cfg
eawpats/ethnic/: gong.pat  tabla.pat  tabla.txt  talkbend.pat  talkdrum.pat
eawpats/gsdrum08/: gsdrum08.txt  roomhi1.pat  roomhi2.pat  roomkick.pat  roomlow1.pat  roomlow2.pat  roommid1.pat  roommid2.pat
eawpats/gsdrum25/: 78hhc.pat  78hho.pat  78kick.pat  78snare.pat  808bd2.pat  808clap1.pat  (+26 more)
include/: d_event.hpp  d_main.hpp  d_ticcmd.hpp  doomstat.hpp  dstrings.hpp  g_game.hpp  hu_lib.hpp  i_sound.hpp  info.hpp  m_cheat.hpp  m_menu.hpp  m_random.hpp  p_mobj.hpp  p_saveg.hpp  p_spec.hpp  r_bsp.hpp  r_data.hpp  r_defs.hpp  r_local.hpp  r_main.hpp  r_state.hpp  r_things.hpp  sounds.hpp  st_stuff.hpp  tables.hpp  w_wad.hpp
ipx/: IPXSTR.H  IPX_FRCH.H
linuxdoom-1.10/: ChangeLog  FILES2  Makefile  README.asm  README.book  README.sound  am_map.cpp  am_map.cxx  am_map.h  d_englsh.h  d_event.h  d_french.h  d_items.cpp  d_items.cxx  d_items.h  d_main.cpp  d_main.cxx  d_main.h  d_net.cpp  d_net.cxx  d_net.h  d_player.h  d_textur.h  d_think.h  d_ticcmd.h  doomdata.h  doomdef.cpp  doomdef.cxx  doomdef.h  doomstat.cpp  doomstat.cxx  doomstat.h  doomtype.h  dstrings.c  dstrings.cpp  dstrings.cxx  dstrings.h  f_finale.cpp  f_finale.cxx  f_finale.h  (+165 more)
sersrc/: PORT.C  SERSETUP.C  SERSETUP.H  SERSTR.H
sndserv/: sounds.h  soundsrv.h  soundst.h  wadread.h
src/: ResourcePath.cpp  am_map.cpp  am_map.ixx  argv.ixx  d_englsh.hpp  d_event.hpp  d_items.cpp  d_items.hpp  d_main.cpp  d_main.ixx  d_net.cpp  d_net.hpp  d_player.hpp  d_ticcmd.hpp  doomdata.hpp  doomdef.hpp  doomdef.ixx  doomstat.cpp  doomstat.hpp  doomstat.ixx  dstrings.cpp  dstrings.hpp  f_finale.cpp  f_finale.hpp  f_wipe.cpp  f_wipe.hpp  finale.ixx  g_game.cpp  g_game.hpp  getopt.h  hu_lib.cpp  hu_lib.hpp  hu_stuff.cpp  hu_stuff.hpp  hud.ixx  i_main.cpp  i_net.cpp  i_sound.cpp  i_sound.hpp  i_system.cpp  (+91 more)
(+125 files in other folders)
